# gofileseq

./: .codedocs  .gitignore  .goreleaser.yml  .travis.yml  .travis.yml.disabled  CHANGES  CHANGES.html  LICENSE  Makefile  README.md  annotated.html  bench_test.go  classes.html  classfileseq_1_1FileSequence-members.html  classfileseq_1_1FileSequence.html  classfileseq_1_1FrameSet-members.html  classfileseq_1_1FrameSet.html  classfileseq_1_1Range-members.html  classfileseq_1_1Range.html  classfileseq_1_1RangeIterator-members.html  classfileseq_1_1RangeIterator.html  classfileseq_1_1Ranges-members.html  classfileseq_1_1Ranges.html  classfileseq_1_1RangesIterator-members.html  classfileseq_1_1RangesIterator.html  classfileseq_1_1Status-members.html  classfileseq_1_1Status.html  classfileseq_1_1internal_1_1MultiHashPad-members.html  classfileseq_1_1internal_1_1MultiHashPad.html  classfileseq_1_1internal_1_1PaddingMapper-members.html  classfileseq_1_1internal_1_1PaddingMapper.html  classfileseq_1_1internal_1_1SingleHashPad-members.html  classfileseq_1_1internal_1_1SingleHashPad.html  dir_2a2f01014ca958da3c6946dd74413aa9.html  error_8h_source.html  files.html  fileseq.go  fileseq_8h_source.html  fileseq_test.go  frameset.go  (+16 more)
.github/workflows/: ci.yml
cmd/seqinfo/: README.md  seqinfo.go
cmd/seqls/: .goxc.json  README.md  glide.yaml  listing.go  main.go  manager.go  stat.go  stat_windows.go
cpp/: .gitignore  CHANGES.html  CMakeLists.txt  README.md  TODO.md  _c_h_a_n_g_e_s.html  annotated.html  annotated.js  annotated_dup.js  build.sh  classes.html  classfileseq_1_1FileSequence-members.html  classfileseq_1_1FileSequence.html  classfileseq_1_1FileSequence.js  classfileseq_1_1FileSequence_a05d9769a78aa65f79623b0cc85820f23_cgraph.map  classfileseq_1_1FileSequence_a05d9769a78aa65f79623b0cc85820f23_cgraph.md5  classfileseq_1_1FileSequence_a09cd30eca2bff51bd7175147ddb2d8fc_cgraph.map  classfileseq_1_1FileSequence_a09cd30eca2bff51bd7175147ddb2d8fc_cgraph.md5  classfileseq_1_1FileSequence_a0a6d42444fec7fbabfe711b078e4f34e_cgraph.map  classfileseq_1_1FileSequence_a0a6d42444fec7fbabfe711b078e4f34e_cgraph.md5  classfileseq_1_1FileSequence_a12e0739411200937a2fd0a7b90c5e2c8_cgraph.map  classfileseq_1_1FileSequence_a12e0739411200937a2fd0a7b90c5e2c8_cgraph.md5  classfileseq_1_1FileSequence_a1ccccfb6f25cb2d8a2e72aa64499c56d_cgraph.map  classfileseq_1_1FileSequence_a1ccccfb6f25cb2d8a2e72aa64499c56d_cgraph.md5  classfileseq_1_1FileSequence_a1eaac8c98a0e506fb6213a171ce4775e_cgraph.map  classfileseq_1_1FileSequence_a1eaac8c98a0e506fb6213a171ce4775e_cgraph.md5  classfileseq_1_1FileSequence_a31670fc375b42ac11a8e5b9b1fb37550_cgraph.map  classfileseq_1_1FileSequence_a31670fc375b42ac11a8e5b9b1fb37550_cgraph.md5  classfileseq_1_1FileSequence_a3637b9925cbff5ddcfaf2a47f9fbef75_cgraph.map  classfileseq_1_1FileSequence_a3637b9925cbff5ddcfaf2a47f9fbef75_cgraph.md5  classfileseq_1_1FileSequence_a378f29ac655331cb9bb43aae59ccb77e_cgraph.map  classfileseq_1_1FileSequence_a378f29ac655331cb9bb43aae59ccb77e_cgraph.md5  classfileseq_1_1FileSequence_a3caef0f425d08e88b6f98a16248b61e5_cgraph.map  classfileseq_1_1FileSequence_a3caef0f425d08e88b6f98a16248b61e5_cgraph.md5  classfileseq_1_1FileSequence_a424daefec648723afdc354686ccaa5a6_cgraph.map  classfileseq_1_1FileSequence_a424daefec648723afdc354686ccaa5a6_cgraph.md5  classfileseq_1_1FileSequence_a47fca101b93f983738f4e97738846966_cgraph.map  classfileseq_1_1FileSequence_a47fca101b93f983738f4e97738846966_cgraph.md5  classfileseq_1_1FileSequence_a492a7786c6857aeb44f019ccdf74f063_cgraph.map  classfileseq_1_1FileSequence_a492a7786c6857aeb44f019ccdf74f063_cgraph.md5  (+286 more)
cpp-port/: FileseqAPIMain.dox  README.md  error.cpp  error.h  fileseq.cpp  fileseq.h  frameset.cpp  frameset.h  pad.cpp  pad.h  sequence.cpp  sequence.h  types.h  wscript
cpp-port/docs/: Doxyfile  FileseqAPIMain.dox  header.html  overrides.css  smeagolSearch.js
cpp-port/private/: frameset_p.cpp  frameset_p.h  ranges.cpp  sequence_p.cpp  sequence_p.h  strings.h  util.h
cpp-port/ranges/: ranges.cpp  ranges.h
cpp-port/test/: TestFileSequence.cc  TestFrameSet.cc  TestFunctions.cc  TestRanges.cc  common.h  main.cc  raw_tests.cpp  wscript_build
cpp/cmake/: Config.cmake.in  FindModule.cmake  FindPCRECPP.cmake  FindPackageHandleStandardArgs.cmake
cpp/docs/: FileseqAPIMain.dox
cpp/export/: export.go  storage.go  uuid.go
cpp/ext/antlr4/: CMakeLists.txt
cpp/ext/antlr4/runtime/: CMakeLists.txt
cpp/ext/gtest/: CMakeLists.txt
cpp/private/: .gitignore  export.go  fileseq_p.cpp  frameset_p.cpp  frameset_p.h  libgofileseq.h  sequence_p.cpp  sequence_p.h  storage.go  strings.cpp  strings.h
cpp/private/parser/: fileseqBaseVisitor.cpp  fileseqBaseVisitor.h  fileseqLexer.cpp  fileseqLexer.h  fileseqParser.cpp  fileseqParser.h  fileseqVisitor.cpp  fileseqVisitor.h  parse.cpp  parse.h  parse_postprocess.cpp  parse_postprocess.h
cpp/ranges/: ranges.cpp  ranges.h
cpp/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  pages_1.js  related_0.js  search.css  search.js  searchdata.js
cpp/test/: .gitignore  CMakeLists.txt  TestFileSequence.cc  TestFrameSet.cc  TestFunctions.cc  TestRanges.cc  common.h  main.cc  main.cpp  raw_tests.cpp  test.pro
exp/cpp/: .gitignore  README.md  fileseq.h  fileseq.pro  frameset.cpp  sequence.cpp  types.h  wscript
exp/peg/: grammar.peg  grammar.peg.go  grammar_test.go  parser.go
grammar/: Makefile  fileseq.g4
internal/parser/: .gitignore  fileseq_base_visitor.go  fileseq_lexer.go  parse.go  (+4 more)
ranges/: ranges.go  ranges_test.go
search/: all_7.js  all_8.js  all_b.js  all_e.js  all_f.js  classes_2.js  classes_4.js  functions_3.js  functions_7.js  pages_0.js  related_0.js  search.js
(+21 files in other folders)
